--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,162 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #FFFAFA;
+	--foreground: #171717;
+	--expo-in: linear(0 0%, 0.0085 31.26%, 0.0167 40.94%,
+			0.0289 48.86%, 0.0471 55.92%,
+			0.0717 61.99%, 0.1038 67.32%,
+			0.1443 72.07%, 0.1989 76.7%,
+			0.2659 80.89%, 0.3465 84.71%,
+			0.4419 88.22%, 0.554 91.48%,
+			0.6835 94.51%, 0.8316 97.34%, 1 100%);
+	--expo-out: linear(0 0%, 0.1684 2.66%, 0.3165 5.49%,
+			0.446 8.52%, 0.5581 11.78%,
+			0.6535 15.29%, 0.7341 19.11%,
+			0.8011 23.3%, 0.8557 27.93%,
+			0.8962 32.68%, 0.9283 38.01%,
+			0.9529 44.08%, 0.9711 51.14%,
+			0.9833 59.06%, 0.9915 68.74%, 1 100%);
+}
+
+.dark {
+	--background: #0c0c0c;
+	--foreground: #ededed;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	--animate-meteor: meteor 5s linear infinite;
+
+	@keyframes meteor {
+		0% {
+			transform: rotate(var(--angle)) translateX(0);
+			opacity: 1;
+		}
+
+		70% {
+			opacity: 1;
+		}
+
+		100% {
+			transform: rotate(var(--angle)) translateX(-500px);
+			opacity: 0;
+		}
+	}
+
+	--animate-line-shadow: line-shadow 15s linear infinite;
+
+	@keyframes line-shadow {
+		0% {
+			background-position: 0 0;
+		}
+
+		100% {
+			background-position: 100% -100%;
+		}
+	}
+
+	--animate-marquee: marquee var(--duration) infinite linear;
+	--animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+
+	@keyframes marquee {
+		from {
+			transform: translateX(0);
+		}
+
+		to {
+			transform: translateX(calc(-100% - var(--gap)));
+		}
+	}
+
+	@keyframes marquee-vertical {
+		from {
+			transform: translateY(0);
+		}
+
+		to {
+			transform: translateY(calc(-100% - var(--gap)));
+		}
+	}
+
+	--animate-aurora: aurora 8s ease-in-out infinite alternate;
+
+	@keyframes aurora {
+		0% {
+			background-position: 0% 50%;
+			transform: rotate(-5deg) scale(0.9);
+		}
+
+		25% {
+			background-position: 50% 100%;
+			transform: rotate(5deg) scale(1.1);
+		}
+
+		50% {
+			background-position: 100% 50%;
+			transform: rotate(-3deg) scale(0.95);
+		}
+
+		75% {
+			background-position: 50% 0%;
+			transform: rotate(3deg) scale(1.05);
+		}
+
+		100% {
+			background-position: 0% 50%;
+			transform: rotate(-5deg) scale(0.9);
+		}
+	}
+
+	--animate-heartbeat: heartbeat 1.5s ease-in-out infinite;
+
+	@keyframes heartbeat {
+
+		0%,
+		100% {
+			transform: scale(1);
+		}
+
+		50% {
+			transform: scale(1.1);
+		}
+	}
+
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+::view-transition-group(root) {
+	animation-timing-function: var(--expo-out);
+}
+
+::view-transition-new(root) {
+	mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><filter id="blur"><feGaussianBlur stdDeviation="2"/></filter></defs><circle cx="20" cy="20" r="18" fill="white" filter="url(%23blur)"/></svg>') center / 0 no-repeat;
+	animation: scale 1s;
+}
+
+::view-transition-old(root),
+.dark::view-transition-old(root) {
+	animation: none;
+	z-index: -1;
+}
+
+.dark::view-transition-new(root) {
+	animation: scale 1s;
+}
+
+@keyframes scale {
+	to {
+		mask-size: 200vmax;
+	}
 }
