--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,6 +128,18 @@
 		}
 	}
 
+	--animate-background-position-spin: background-position-spin 3000ms infinite alternate;
+
+	@keyframes background-position-spin {
+		0% {
+			background-position: top center;
+		}
+
+		100% {
+			background-position: bottom center;
+		}
+	}
+
 }
 
 body {
